# hit-rag

./: .dockerignore  .gitignore  README.md  SETUP.md  agent_routes.py  api_server.py  chat_routes.py  config.py  config_routes.py  database.py  document_routes.py  env.template  file_upload_routes.py  image_uploader.py  init_system.py  main.py  migrate_chat_db.py  pyproject.toml  rebuild_vectors.py  schema.sql
.dbs/: chat_schema.sql  file_upload_schema.sql  prompt_config_schema.sql  rag_config_schema.sql  schema.sql
chat/: __init__.py  conversation_manager.py  dspy_pipeline.py  dspy_signatures.py  memory_cache.py
deploy/: Dockerfile  Dockerfile.frontend-unified  QUICKSTART.md  README.deploy.md  README.md  SINGLE_CONTAINER_SETUP.md  deploy-single.sh  deploy.sh  docker-compose.dev.yml  docker-compose.single.yml  docker-compose.yml  download-uv.sh  healthcheck.sh  nginx-unified.conf  test-deployment.sh
llm_api/: llm_client.py  prompt_templates.py
processing_stages/: stage1_baseline.py  stage2_clean_map.py  stage3_refine_locate.py
tokenizer/: token_mapper.py  tokenizer_client.py
vector_db/: __init__.py  embedding_service.py  vector_store.py  vectorization_manager.py
